[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Bala.gd" type="Script" id=1]
[ext_resource path="res://Artes/New Piskel (4).png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.5, 3.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 3.5 )

[node name="Bala" type="KinematicBody2D" groups=["bala"]]
scale = Vector2( 1.3, 1.3 )
script = ExtResource( 1 )

[node name="ColisorBala" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="ImagemBala" type="Sprite" parent="."]
position = Vector2( -5.96046e-08, 2 )
scale = Vector2( 0.302083, 0.302083 )
texture = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 0.5 )
scale = Vector2( 1.2, 0.35 )

[node name="AreaBala" type="Area2D" parent="."]
collision_mask = 9

[node name="ColisorAreaBala" type="CollisionShape2D" parent="AreaBala"]
position = Vector2( 0, 0.5 )
shape = SubResource( 2 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="AreaBala" to="." method="_on_AreaBala_body_entered"]
